# rust-project

data/: ohlc-5m-b.txt  test_file.txt
lib/: Cargo.toml  tarpaulin-report.html
lib/src/: lib.rs
lib/src/models/: event.rs  mod.rs  ohlc.rs  rolling.rs  stream.rs
lib/src/utils/: file.rs  mod.rs  parser.rs
